<resources>
    <string name="app_name">LAB2_Guido_Padilla</string>
    <string name="name_text">Nombre:</string>
    <string name="guatemala_text">Hi, my name is Aleks.
\n\nI love fish.
\n\nThe kind that is alive and swims around in an aquarium or river, or a lake, and definitely the ocean.
\nFun fact is that I have several aquariums and also a river.
\n\nI like eating fish, too. Raw fish. Grilled fish. Smoked fish. Poached fish - not so much.
\nAnd sometimes I even go fishing.
\nAnd even less sometimes, I actually catch something.
\n\nOnce, when I was camping in Canada, and very hungry, I even caught a large salmon with my hands.
\n\nI\'ll be happy to teach you how to make your own aquarium.
\nYou should ask someone else about fishing, though.\n\n</string>
    <string name="zacapa_name">Zacapa</string>
    <string name="izabal_name">Izabal</string>
    <string name="peten_name">Peten</string>
    <string name="comments">Comentario</string>
    <string name="comment">Comentar</string>
    <string name="hint_name">Ingrese su nombre</string>
    <string name="hint_comment">Ingrese su comentario</string>
</resources>
